@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-12-29T01:21:31Z",
+  "timestamp" : "2024-12-30T01:17:15Z",
   "count_outdated" : 1187,
   "uniques_outdated" : 716,
-  "count" : 1189,
-  "uniques" : 718,
+  "count" : 1190,
+  "uniques" : 719,
   "clones" : [
     {
       "timestamp": "2024-12-25T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-12-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-12-29T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
