@@ -1,3 +1,12 @@
+2024-12-30T01:17:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12540367644 # 525
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-30
+* notice: last 14d: unq all: 1 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 716 1187 / 718 1189
+* notice: next accum: outdated-unq outdated-all / unq all: 716 1187 / 719 1190
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-12-29]
+
 2024-12-29T01:21:31Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12531289976 # 524
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-29
